--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -28,7 +28,10 @@
                     <div class="form-group">
                         <input type="submit" class="btn btn-info btn-block" value="Signup">
                     </div>
-
+                     
+                    <div class ="form-group">
+                        <a href="/auth/facebook/callback">Login with Facebook</a>
+                    </div>
                 </form>
         </div>
         <div class="col col sm-3 col md-3 col lg-3 col xl-3"></div>
